# lymphNet

./: .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_mengyuan.txt  ln-torch-demo.ipynb  measure.py  pyproject.toml  setup.py  token
bash/: calulate_weights.sh  dl_segmentation.sh  dl_segmentation2.sh  dl_segmentation_2.sh  dl_segmentation_ML.sh  dl_segmentation_arraybash.sh  dl_segmentation_aug.sh  dl_segmentation_aug2.sh  dl_segmentation_bash.sh  follicle_bash.sh  germinal_bash.sh  germinal_bash2.sh  patchextract_bash.sh  pmaskextract_bash.sh  pmaskextract_bash1.sh  sinus_bash.sh  tfrecord_wsi_bash.sh  tfwrite_arraybash.sh  tfwrite_bash.sh
config/: .config_tf.json.swp  config_100c.yaml  config_100c_base.yaml  config_100c_base2.yaml  config_aug_A1-alt.yaml  config_aug_A1-alt2.yaml  config_aug_A1.yaml  config_aug_A10.yaml  config_aug_A2-single.yaml  config_aug_A2.yaml  config_aug_A3.yaml  config_aug_A4.yaml  config_aug_A4H.yaml  config_aug_A5.yaml  config_aug_A6.yaml  config_aug_A7.yaml  config_aug_A8.yaml  config_aug_A9.yaml  config_boundaries.json  config_g_mn1024.yaml  config_g_mn1024_single.yaml  config_g_mn1280.yaml  config_g_mn1536.yaml  config_germinal.yaml  config_germinal_single.yaml  config_germinal_template.json  config_germinal_template_10x.json  config_germinal_template_2.json  config_pextract_f.json  config_pextract_g.json  config_pextract_gs.json  config_pextract_s.json  config_sinus.yaml  config_sinus_template.json  config_stain_M0.yaml  config_stain_M1-single.yaml  config_stain_M1.yaml  config_stain_M2.yaml  config_stain_M3.yaml  config_stain_V0.yaml  (+21 more)
python/: .calculate_classweights.py.swo  .calculate_classweights.py.swp  .calculate_classweights2.py.swp  .calculate_classweights_bi.py.swp  .custom_loss_functions.py.swo  .custom_loss_functions.py.swp  .ln_ml_segmentation_bi.py.swp  .ln_segmentation_multi.py.swp  .predict.py.swp  .predict_wsi.py.swp  .tfrecord_write.py.swp  .utilities.py.swp  crfrnn_layer.py  distributed_train.py  ln_segmentation.py  measure.py  predict.py  predict2.py  quantify.py  test.py  tuning.py  tuning_augmentations.py
src/: count_LN_my_updated.py  distributed_train.py  finetune.py  generate_patches.py  ln_segmentation.py  main.py  measure.py  normalise.py  output_pngs.py  predict.py  predict_multiple.py  predict_tor.py  slide_patching.py  stitching.py  test.py  tuning.py  utils.py
src-2/: distributed_train.py  evaluation.py  main.py  predict-2.py  test.py  tuning.py
(+456 files in other folders)
